testdata/baselines/reference/submodule/compiler/arrowExpressionJs.errors.txt
mytest.js(6,24): error TS8004: Type parameter declarations can only be used in TypeScript files.


==== mytest.js (1 errors) ====
    /**
     * @template T
     * @param {T|undefined} value value or not
     * @returns {T} result value
     */
    const cloneObjectGood = value => /** @type {T} */({ ...value });
                           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS8004: Type parameter declarations can only be used in TypeScript files.